--- a/style.css
+++ b/style.css
@@ -1,4 +1,115 @@
 
+/*Social Media Icons*/
+
+.sm-icon:hover {
+    border: solid;
+    border-color: #7a0066;
+    border-width: 3px;
+    border-radius: 6px;
+}
+
+.sm-icon a {
+    text-decoration: none;
+}
+
+.sm-icon {
+    width: 12%;
+    border-radius: 6px;
+    padding: 0.2em;
+}
+
+
+
+/*Recipe Footer*/
+
+/*
+.rec-footer-padding {
+    padding: 0em 0em 2em 0em;
+    background-color: #c37d92;
+}
+*/
+
+.rec-social {
+    flex: 24%;
+}
+
+.rec-enter-email {
+    flex: 46%;
+}
+
+.rec-connect {
+    flex: 30%;
+    font-size: 3em;
+    font-family: 'Calisto MT', Arial;
+    padding: 0em 1em 0em 0.5em;
+}
+
+.rec-flexbox-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #c37d92;
+    padding: 2.5em 2em 2.5em 2em;
+}
+
+/*Recipe pages*/
+
+.rec-adapted-padding {
+    padding: 0em 0em 0em 0em;
+    margin: 0em;
+}
+
+.rec-link-padding {
+    padding: 0.5em 0em 0em 0em;
+    margin: 0em;
+}
+
+.rec-nav-bar a:hover {
+    color: blue;  
+}
+
+.rec-nav-bar a {
+    text-decoration: none;
+    color: #000000;
+    text-decoration: none;
+}
+
+.rec-nav-bar {
+    font-family: Arial, sans-serif;
+    font-size: 1em;
+    background-color: #ffffff;
+    padding: 0.5em 0em 0em 2.5em;
+    /*border-style: dotted;
+    border-color: red;*/
+}
+
+/*.yield {
+    padding-left: 1.5em;
+    margin: 0em 0em;
+}*/
+
+li {
+    padding-bottom: 0.5em;
+  }
+
+.recipe-link:hover {
+    color: #7a0066;
+}
+
+.recipe-link {
+    text-decoration: underline;
+    color: black;
+}
+
+.recipe {
+    background-color: #ffffff;
+    padding: 0.5em 4em 2em 4em;
+}
+
+
 
 
 /*Categories*/
@@ -194,14 +305,19 @@
 }
 
 .categories-header-words {
-    flex: 50%;
+    flex: 66%;
+    text-align: left;
+    padding: 0em 2em 0em 5em;
+    font-size: 1.355em;
 }
 
 .categories-header-image {
-    flex: 50%;
+    flex: 33%;
+    padding: 0em 2em;
 }
 
 .categories-header {
+    /*flex: 50%;*/
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -209,6 +325,7 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 1em 0em;
+    background-color: #f1f1f1;
     /*border-bottom-color: #7a0066;
     border-bottom-style: solid;
     border-bottom-width: 1.5px;*/
@@ -331,6 +448,37 @@ img {
 
 #column-right {
     padding-right: 8px;
+}
+
+
+
+@media screen and (max-width: 500px) {
+    .categories-header-image {
+        order: 1;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .categories-header-words {
+        order: 2;
+        text-align: left;
+        font-size: 0.75em;
+        padding: 0em 2em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .categories-header {
+      flex-direction: column;
+      text-align: center;
+      padding: 1em 0em;
+      font-family: Arial, 'Corbel Light', 'Arial Narrow', sans-serif;
+      font-weight: bold;
+      font-size: 1.3em;
+      /*border: solid;
+      border-color: green;*/
+
+    }
 }
 
 
