--- a/style.css
+++ b/style.css
@@ -1,4 +1,35 @@
 
+
+.footer-enter-email {
+    font-size: 1.15em;
+    /*border: solid;*/
+    font-family: Arial, 'Calisto MT', 'Corbel Light', Arial;
+    text-align: center;
+}
+
+
+.footer-img-test img:hover {
+    border: solid;
+    border-color: #7a0066;
+    border-width: 3px;
+    border-radius: 6px;
+}
+
+.footer-img-test img {
+    width: 5%;
+    text-decoration: none;
+    margin: 0em 0.25em 0em 0.25em;
+    border-radius: 10px;
+}
+
+.footer-img-test a {
+    text-decoration: none;
+}
+.footer-img-test {
+    padding: 2em;
+    text-align: center;
+}
+
 /*Social Media Icons*/
 
 .sm-icon:hover {
@@ -10,7 +41,6 @@
 
 .sm-icon a {
     text-decoration: none;
-    deco
 }
 
 .sm-icon {
@@ -33,22 +63,19 @@
 */
 
 .rec-social {
-    flex: 25%;
-    border: solid;
+    flex: 33%;
+    /*border: solid;*/
+    text-align: right;
 }
 
 .rec-enter-email {
-    flex: 45%;
+    flex: 66%;
     font-size: 1.25em;
-    border: solid;
-}
+    /*border: solid;*/
+    font-family: 'Corbel Light', Arial;
+    font-weight: bold;
+    padding: 0em 0em 0em 1em;
 
-.rec-connect {
-    flex: 30%;
-    font-size: 2.5em;
-    font-family: 'Calisto MT', Arial;
-    padding: 0em 1em 0em 0.5em;
-    border: solid;
 }
 
 .rec-flexbox-container {
@@ -59,7 +86,15 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: #c37d92;
-    padding: 2.5em 2em 2.5em 2em;
+    padding: 0.25em 2em 2.5em 2em;
+}
+
+.rec-connect {
+    font-size: 2em;
+    font-family: 'Calisto MT', Arial;
+    padding: 0.75em 1em 0.75em 1em;
+    /*border: solid;*/
+    text-align: center;
 }
 
 /*Recipe pages*/
@@ -311,11 +346,15 @@ li {
     */
 }
 
+.rec-rec-by {
+    font-size: 1em;
+}
+
 .categories-header-words {
     flex: 66%;
     text-align: left;
     padding: 0em 2em 0em 5em;
-    font-size: 1.355em;
+    font-size: 1.4em;
 }
 
 .categories-header-image {
@@ -458,6 +497,25 @@ img {
 }
 
 
+
+@media screen and (min-width: 900px) {
+    .footer-img-test img {
+        width: 2%; 
+    }
+}
+
+
+@media screen and (min-width: 700px) {
+    .footer-img-test img {
+        width: 3.5%; 
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .footer-img-test img {
+        width: 10%; 
+    }
+}
 
 @media screen and (max-width: 500px) {
     .categories-header-image {
