--- a/style.css
+++ b/style.css
@@ -463,6 +463,7 @@ footer {
     border-top-color: #E197A2;
     border-bottom: solid;
     border-bottom-color: #E197A2;
+    padding: 50px 50px;
 }
 
 
@@ -613,15 +614,25 @@ img {
     }
 }
 
-@media screen and (min-width: 700px) {
+/*@media only screen and () {
+    
+}*/
+
+@media screen and (min-width: 1200px) {
     .photo-grid {
-        padding: 50px 50px;
+        padding: 4em 12em 6em 12em;
     }
 }
 
-@media screen and (max-width: 700px) {
+/*@media screen and (min-width: 400px) {
     .photo-grid {
-        padding: 20px 20px;
+        padding: 50px 50px;
+    }
+}*/
+
+@media screen and (max-width: 600px) {
+    .photo-grid {
+        padding: 40px 40px;
     }
 }
 
